Fix security issue with the copyright link to the CC0 license

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,7 +2,7 @@ site_name: 博慎的數位花園
 site_url: https://www.marvin-elsen.com
 site_description: Marvin Elsen is a passionate German software engineer and InfoSec-enthusiast. Empowering people through exceptional, great-looking and secure software is what drives him to become his greatest version.
 site_author: Marvin Elsen
-copyright: 2020, Marvin Elsen. <a href="https://creativecommons.org/publicdomain/zero/1.0/" target="_blank">No rights reserved.</a>
+copyright: 2020, Marvin Elsen. <a href="https://creativecommons.org/publicdomain/zero/1.0/" target="_blank" rel="noopener">No rights reserved.</a>
 docs_dir: vimwiki
 site_dir: site
 repo_url: https://github.com/elsenm/digital-garden
